--- a/SocialStocks2/SocialStocks2.csproj
+++ b/SocialStocks2/SocialStocks2.csproj
@@ -125,6 +125,7 @@
     </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -183,6 +184,18 @@
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="images\ajax-loader.gif" />
+    <Content Include="images\Attribute.jpg" />
+    <Content Include="images\delete.png" />
+    <Content Include="images\Element.jpg" />
+    <Content Include="images\facebook.png" />
+    <Content Include="images\file.gif" />
+    <Content Include="images\folder-closed.gif" />
+    <Content Include="images\folder.gif" />
+    <Content Include="images\minus.gif" />
+    <Content Include="images\plus.gif" />
+    <Content Include="images\Properties.jpg" />
+    <Content Include="images\twitter.png" />
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
@@ -294,6 +307,8 @@
     <TypeScriptCompile Include="app\components\app.component.stocks.spec.ts" />
     <TypeScriptCompile Include="app\components\app.component.stocks.ts" />
     <TypeScriptCompile Include="app\app.module.ts" />
+    <TypeScriptCompile Include="app\components\quote.ts" />
+    <TypeScriptCompile Include="app\components\rssitem.ts" />
     <TypeScriptCompile Include="app\components\stock.ts" />
     <TypeScriptCompile Include="app\services\app.service.stocks.ts" />
     <TypeScriptCompile Include="main.ts" />
