--- a/SocialStocks2/Areas/MVC/Views/Web.config
+++ b/SocialStocks2/Areas/MVC/Views/Web.config
@@ -10,9 +10,17 @@
   </configSections>
   <connectionStrings>
 
+    <!--
     <add name="DefaultConnection"
          connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SocialConfig-20150730011700.mdf;Initial Catalog=aspnet-SocialConfig-20150730011700;Integrated Security=True"
          providerName="System.Data.SqlClient" />
+         -->
+
+    <add name="DefaultConnection"
+         connectionString="Data Source=tcp:sql2k1201.discountasp.net;Initial Catalog=SQL2012_590464_bfo;User ID=SQL2012_590464_bfo_user;Password=FivePoint7;MultipleActiveResultSets=True"
+         providerName="System.Data.SqlClient"/>
+
+
   </connectionStrings>
   
   <system.web.webPages.razor>
