removed real connection string to SQL db

--- a/SocialStocks2/Web.config
+++ b/SocialStocks2/Web.config
@@ -14,8 +14,9 @@
          connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SocialConfig-20150730011700.mdf;Initial Catalog=aspnet-SocialConfig-20150730011700;Integrated Security=True" 
          providerName="System.Data.SqlClient" />
      -->
-    <add name="DefaultConnection" connectionString="Data Source=tcp:sql2k1201.discountasp.net;Initial Catalog=SQL2012_590464_bfo;User ID=SQL2012_590464_bfo_user;Password=FivePoint7;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
     <!--
+    REMOVED real connection string for obvious reasons..
+    
       <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=SocialStocks2-2-1-alpha1;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
        -->
   </connectionStrings>
