--- a/SocialStocks2/packages.config
+++ b/SocialStocks2/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="DnsClient" version="1.0.7" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
@@ -27,8 +28,13 @@
   <package id="Microsoft.Owin.Security.Twitter" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.6.1" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.6.1" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
